1601587350 | 64 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_french.txt,  M content/vrmonitor/translations/vrmonitor_errors_german.txt,  M content/vrmonitor/translations/vrmonitor_errors_greek.txt,  M content/vrmonitor/translations/vrmonitor_errors_hungarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_japanese.txt,  M content/vrmonitor/translations/vrmonitor_errors_latam.txt,  M content/vrmonitor/translations/vrmonitor_errors_norwegian.txt,
https://steamdb.info/patchnotes/5624549/

--- a/content/vrmonitor/translations/vrmonitor_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_danish.txt
@@ -1533,7 +1533,7 @@
 "[english]CalibrateControllerTrackpad_Title"	"Calibrate Controller Trackpad"
 "CalibrateControllerTrackpad_Start_UpperText"	"Dette vil kalibrere din controllers trackpad. Du bør kalibrere trackpaden, hvis den virker upræcis eller du oplever pludselige bevægelser."
 "[english]CalibrateControllerTrackpad_Start_UpperText"	"This will calibrate your controller's trackpad. You should calibrate the trackpad if it seems jittery or you are seeing unexpected touches."
-"CalibrateControllerTrackpad_Start_LowerText"	"Sørg for at du ikke rør trackpaden og klik på \"Næste\" for at fortsætte."
+"CalibrateControllerTrackpad_Start_LowerText"	"Sørg for, at du ikke rører trackpaden, og klik på \"Næste\" for at fortsætte."
 "[english]CalibrateControllerTrackpad_Start_LowerText"	"Make sure you are not touching the trackpad and click Next to continue."
 "CalibrateControllerTrackpad_Progress_UpperText"	"Kalibrerer trackpad ..."
 "[english]CalibrateControllerTrackpad_Progress_UpperText"	"Calibrating trackpad ..."
