--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -979,7 +979,7 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR-virhe"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"Grafiikkasuoritin ei pysty kommunikoimaan VR-lasien kanssa, se aiheuttaa HDCP-virheen. Poista kaikki kaapelin adapterit ja lisäosat ja yritä uudelleen. Kokeile grafiikkasuorittimen toista porttia, jos sellainen on saatavilla. <b>Klikkaa nollaa-linkkiä alta nollataksesi VR-lasit, jotta grafiikkasuoritin yrittää yhdistää uudelleen.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Lisätietoja</a>."
+"Warning_DismissableWarning_HDCPError_Description"	"Näytönohjain ei pysty kommunikoimaan VR-lasien kanssa ja se aiheuttaa HDCP-virheen. Poista kaikki kaapelin adapterit ja lisäosat ja yritä uudelleen. Kokeile näytönohjaimen toista porttia, jos sellainen on saatavilla. <b>Klikkaa nollaa-linkkiä alta nollataksesi VR-lasit, jotta näytönohjain yrittää yhdistää uudelleen.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Lisätietoja</a>."
 "[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
 "Warning_DismissableWarning_HDCPError_Action"	"Nollaa VR-lasit"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
@@ -1253,7 +1253,7 @@
 "[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Näytön yhteysongelma"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
-"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Näytönohjaimesi ei voi yhdistää VR-lasien näyttöön. Poista kaikki kaapelin adapterit ja lisäosat ja yritä uudelleen. Kokeile grafiikkasuorittimen toista porttia, jos sellainen on saatavilla. <b>Klikkaa nollaa-linkkiä alta nollataksesi VR-lasisi, jotta grafiikkasuoritin yrittää yhdistää uudelleen.</b>"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Näytönohjaimesi ei voi yhdistää VR-lasien näyttöön. Poista kaikki kaapelin adapterit ja lisäosat ja yritä uudelleen. Kokeile muita näytönohjaimen portteja, jos mahdollista. <b>Klikkaa nollaa-linkkiä alta nollataksesi VR-lasisi, jotta näytönohjain yrittää yhdistää uudelleen.</b>"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Nollaa VR-lasit"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reset Headset"
@@ -1279,5 +1279,13 @@
 "[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Set as default"
 "Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
 "[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
+"Warning_DismissableWarning_EnableAppContainers_Header"	"SteamVR pitää määrittää tukemaan sovelluskontteja."
+"[english]Warning_DismissableWarning_EnableAppContainers_Header"	"SteamVR needs to set itself up for App Containers."
+"Warning_DismissableWarning_EnableAppContainers_Description"	"Tämä vaaditaan, jotta verkkoselaimet voivat näyttää sisältöä VR-laseissasi."
+"[english]Warning_DismissableWarning_EnableAppContainers_Description"	"This is required to allow web browsers to show content on your HMD."
+"Warning_DismissableWarning_EnableAppContainers_Action"	"Päivitä oikeudet"
+"[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
+"Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 }
 }
