--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -189,9 +189,9 @@
 "[english]MenuAction_SteamVRCommunity"	"SteamVR Community"
 "MenuAction_SteamVRHardwareDiscussions"	"Discussões de hardware SteamVR"
 "[english]MenuAction_SteamVRHardwareDiscussions"	"SteamVR Hardware Discussions"
-"MenuAction_SteamVRDeveloperSupport"	"Apoio a desenvolvedores SteamVR"
+"MenuAction_SteamVRDeveloperSupport"	"Apoio a developers SteamVR"
 "[english]MenuAction_SteamVRDeveloperSupport"	"SteamVR Developer Support"
-"MenuAction_SteamWorksDeveloperSupport"	"Apoio a desenvolvedores Steamworks"
+"MenuAction_SteamWorksDeveloperSupport"	"Apoio a developers Steamworks"
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"Criar relatório de sistema"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
@@ -546,7 +546,7 @@
 "[english]CollisionBounds_Squares"	"Squares"
 "CollisionBounds_Advanced"	"Avançado"
 "[english]CollisionBounds_Advanced"	"Advanced"
-"CollisionBounds_Developer"	"Desenvolvedor"
+"CollisionBounds_Developer"	"Developer"
 "[english]CollisionBounds_Developer"	"Developer"
 "HeadsetWarn_MissedFrames"	"Frames perdidas"
 "[english]HeadsetWarn_MissedFrames"	"Missed Frames"
@@ -882,9 +882,9 @@
 "[english]FirmwareWizard_UpdateBasestation_Progress_UpperText"	""
 "FirmwareWizard_UpdateBasestation_Fail_UpperText"	"A atualização deste dispositivo falhou."
 "[english]FirmwareWizard_UpdateBasestation_Fail_UpperText"	"This device update failed."
-"Settings_Developer_Text"	"Definições de desenvolvedor"
+"Settings_Developer_Text"	"Definições de developer"
 "[english]Settings_Developer_Text"	"Developer Settings"
-"Settings_Developer_Info"	"Mostra definições e opções avançadas para desenvolvedores"
+"Settings_Developer_Info"	"Mostra definições e opções avançadas para developers"
 "[english]Settings_Developer_Info"	"Shows advanced settings and options for developers"
 "Settings_Camera_SelectCameraChaperoneColorHeader"	"Câmara - Cor do Chaperone"
 "[english]Settings_Camera_SelectCameraChaperoneColorHeader"	"Camera Chaperone Color"
@@ -1080,7 +1080,7 @@
 "[english]Settings_Advanced_RoomAndTracking_Header"	"Room and Tracking"
 "Settings_Advanced_Reset_Header"	"Restaurar"
 "[english]Settings_Advanced_Reset_Header"	"Reset"
-"Advanced_Developer"	"Desenvolvedor"
+"Advanced_Developer"	"Developer"
 "[english]Advanced_Developer"	"Developer"
 "Advanced_Applications"	"Aplicações"
 "[english]Advanced_Applications"	"Applications"
@@ -1582,7 +1582,7 @@
 "[english]Settings_ShowPlaylistMenu"	"Show playlist menu"
 "Settings_StartSteamVROnAppLaunch"	"Iniciar o SteamVR ao abrir uma aplicação de R.V."
 "[english]Settings_StartSteamVROnAppLaunch"	"Start SteamVR when a VR application starts"
-"Settings_Developer_General_Header"	"Desenvolvedor"
+"Settings_Developer_General_Header"	"Developer"
 "[english]Settings_Developer_General_Header"	"Developer"
 "Settings_DefaultScreenshotType_Text"	"Tipo de captura de ecrã"
 "[english]Settings_DefaultScreenshotType_Text"	"Screenshot Type"
@@ -2255,9 +2255,9 @@
 "[english]Monitor_SpontaneousQuitDialog_Quit"	"Quit SteamVR"
 "SteamVRSystemState_Paused_FirmwareUpdate"	"A atualizar dispositivos..."
 "[english]SteamVRSystemState_Paused_FirmwareUpdate"	"Updating devices..."
-"MenuAction_LegacySettings"	"Definições de desenvolvedor"
+"MenuAction_LegacySettings"	"Definições de developer"
 "[english]MenuAction_LegacySettings"	"Developer Settings"
-"MenuAction_Developer"	"Desenvolvedor"
+"MenuAction_Developer"	"Developer"
 "[english]MenuAction_Developer"	"Developer"
 "MenuAction_WebDevTools"	"Ferramentas Web Dev"
 "[english]MenuAction_WebDevTools"	"Web Dev Tools"
@@ -2622,7 +2622,7 @@
 "[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
 "Settings_BaseStations_Title"	"Definições de estações-base"
 "[english]Settings_BaseStations_Title"	"Base Station Settings"
-"Settings_Developer_Title"	"Definições de desenvolvedor"
+"Settings_Developer_Title"	"Definições de developer"
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"Mostrar gráfico de desempenho"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
