--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -432,7 +432,7 @@
 "[english]QuickCalibrate_CabalSpace"	"Cabal Space"
 "QuickCalibrate_StandingSpace"	"Простір для стояння"
 "[english]QuickCalibrate_StandingSpace"	"Standing Space"
-"QuickCalibrate_DK2Default"	"DK2 за замовчуванням"
+"QuickCalibrate_DK2Default"	"Стандартний DK2"
 "[english]QuickCalibrate_DK2Default"	"DK2 Default"
 "Advanced_Title"	"Розширені"
 "[english]Advanced_Title"	"Advanced"
@@ -935,7 +935,7 @@
 "[english]PerfTestResults_OS"	"OS:"
 "PerfTestResults_CPU_CORES"	"ЦП: %1 (ядер: %2)"
 "[english]PerfTestResults_CPU_CORES"	"CPU: %1 (%2 cores)"
-"PerfTestResults_ShowDetails"	"Відобразити подробиці"
+"PerfTestResults_ShowDetails"	"Показати подробиці"
 "[english]PerfTestResults_ShowDetails"	"Show Details"
 "PerfTestResults_HideDetails"	"Приховати подробиці"
 "[english]PerfTestResults_HideDetails"	"Hide Details"
@@ -989,7 +989,7 @@
 "[english]Settings_Camera_StartTest"	"Test Camera Rate"
 "Settings_Camera_StopTest"	"Зупинити перевірку"
 "[english]Settings_Camera_StopTest"	"Stop Test"
-"Settings_USB_EnhancedStatus"	"Показувати подробиці"
+"Settings_USB_EnhancedStatus"	"Показати подробиці"
 "[english]Settings_USB_EnhancedStatus"	"Show details"
 "PerfTestResults_CPU_OneCore"	"(1 ядро)"
 "[english]PerfTestResults_CPU_OneCore"	"(1 core)"
