--- a/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
@@ -879,5 +879,13 @@
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"personalizată"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
+"Warning_DismissableWarning_EnableAppContainers_Header"	"SteamVR trebuie să se configureze pentru containerele aplicațiilor."
+"[english]Warning_DismissableWarning_EnableAppContainers_Header"	"SteamVR needs to set itself up for App Containers."
+"Warning_DismissableWarning_EnableAppContainers_Description"	"Această acțiune este necesară pentru a permite browserelor web șă afișeze conținut prin intermediul căștii tale de realitate virtuală."
+"[english]Warning_DismissableWarning_EnableAppContainers_Description"	"This is required to allow web browsers to show content on your HMD."
+"Warning_DismissableWarning_EnableAppContainers_Action"	"Actualizează permisiunile"
+"[english]Warning_DismissableWarning_EnableAppContainers_Action"	"Update Permissions"
+"Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
+"[english]Warning_DismissableWarning_EnableAppContainers_ActionURL"	"vrmonitor://steamvr/setappcontainerpermissions"
 }
 }
