--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -821,7 +821,7 @@
 "[english]PerfTestResults_MessageBadCPU"	"Your system isn't capable of rendering low fidelity VR and it appears to be mostly bound by its CPU."
 "PerfTestResults_MessageBadCPUGPU"	"Järjestelmäsi ei kykene renderöimään heikkolaatuistakaan VR-kuvaa. Yksi pullonkaula on ilmeisesti suoritin."
 "[english]PerfTestResults_MessageBadCPUGPU"	"Your system isn't capable of rendering low fidelity VR and it appears to be partially bound by its CPU."
-"PerfTestResults_MessageBadGPU"	"Järjestelmäsi ei kykene renderöimään heikkolaatuistakaan VR-kuvaa. Suurin pullonkaula on ilmeisesti grafiikkasuoritin."
+"PerfTestResults_MessageBadGPU"	"Järjestelmäsi ei kykene renderöimään matalan tarkkuuden VR-kuvaa. Suurin pullonkaula on ilmeisesti grafiikkasuoritin."
 "[english]PerfTestResults_MessageBadGPU"	"Your system isn't capable of rendering low fidelity VR and it appears to be mostly bound by its GPU."
 "PerfTestResults_MessageUpgradeCPU"	"Suosittelemme, että päivität prosessorisi."
 "[english]PerfTestResults_MessageUpgradeCPU"	"We recommend upgrading your CPU."
@@ -1351,7 +1351,7 @@
 "[english]WorkshopUpload_Progress_Start"	"Contacting SteamVR Workshop..."
 "WorkshopUpload_Progress_PreparingConfig"	"Valmistellaan kokoonpanoa..."
 "[english]WorkshopUpload_Progress_PreparingConfig"	"Preparing configuration..."
-"WorkshopUpload_Progress_PreparingContent"	"Työstetään tiedostoja..."
+"WorkshopUpload_Progress_PreparingContent"	"Käsitellään tiedostoja..."
 "[english]WorkshopUpload_Progress_PreparingContent"	"Processing files..."
 "WorkshopUpload_Progress_UploadingContent"	"Lähetetään tiedostoja..."
 "[english]WorkshopUpload_Progress_UploadingContent"	"Uploading files..."
@@ -1523,7 +1523,7 @@
 "[english]DismissableWarning_Windows8"	"Windows 8 (0x8000)"
 "Settings_EnableScreenshots_Info"	"Paina Järjestelmä-painiketta ja vedä liipaisinta ottaaksesi kuvakaappauksen."
 "[english]Settings_EnableScreenshots_Info"	"Use System button + Trigger to take a screenshot"
-"Settings_EnableScreenshots_Text"	"Ota kuvankaappaukset käyttöön (BETA)"
+"Settings_EnableScreenshots_Text"	"Ota kuvakaappaukset käyttöön (BETA)"
 "[english]Settings_EnableScreenshots_Text"	"Enable Screenshots (BETA)"
 "MessageBox_Next"	"Seuraava"
 "[english]MessageBox_Next"	"Next"
@@ -1569,7 +1569,7 @@
 "[english]Settings_Developer_General_Header"	"Developer"
 "Settings_DefaultScreenshotType_Text"	"Kuvakaappaustyyppi:"
 "[english]Settings_DefaultScreenshotType_Text"	"Screenshot Type"
-"Settings_DefaultScreenshotType_Info"	"Valitse oletustyyppi otetuille kuvankaappauksille. Huomaa, että monet VR-sovellukset eivät saata tukea pyydettyä tyyppiä ja muuntavat kuvan stereoskooppiseksi."
+"Settings_DefaultScreenshotType_Info"	"Valitse oletustyyppi otetuille kuvakaappauksille. Huomaa, etteivät monet VR-sovellukset ehkä tue pyydettyä tyyppiä ja muuntavat kuvan stereoskooppiseksi."
 "[english]Settings_DefaultScreenshotType_Info"	"Select the default type of screenshot to take.  Note that many VR applications might not support the requested type and will downgrade to stereoscopic."
 "Settings_DefaultScreenshotType_Mono"	"Normaali"
 "[english]Settings_DefaultScreenshotType_Mono"	"Normal"
@@ -2102,7 +2102,7 @@
 "[english]Advanced_ReprojectionOff"	"Reprojection Off"
 "Settings_StatusWindowHidePopups_Text"	"Hiljennä varoitukset ja ilmoitukset kun tämä on pienennetty"
 "[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
-"MenuAction_ShowControllerBinding"	"Ohjaimen asetukset"
+"MenuAction_ShowControllerBinding"	"Ohjainasetukset"
 "[english]MenuAction_ShowControllerBinding"	"Controller Settings"
 "MenuAction_ShowManageTrackers"	"Hallitse Vive Trackereita"
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
