--- a/content/vrmonitor/translations/vrmonitor_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_tchinese.txt
@@ -141,13 +141,13 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"關閉"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"就緒"
+"SteamVRSystemState_Ready"	"正在遊玩"
 "[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"搜尋中…"
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"關機"
+"SteamVRSystemState_Shutdown"	"退出 VR……"
 "[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"硬體設定進行中…"
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
@@ -245,7 +245,7 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"無法啟動 %1。應用程式介面無法使用。"
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"無法啟動 %1。錯誤為 %2。"
+"MonitorController_ApplicationCouldNotStart"	"無法啟動 %1：%2。"
 "[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"版本 %1"
 "[english]MonitorController_Version"	"Version %1"
@@ -675,7 +675,7 @@
 "[english]FirmwareWizard_Shutdown_Title"	"Update Device"
 "FirmwareWizard_Shutdown_TextContent"	"更新韌體之前必須先結束全部目前正在執行中的 VR 應用程式。\n\n確定要繼續嗎？"
 "[english]FirmwareWizard_Shutdown_TextContent"	"To update your device, SteamVR will need to quit any currently running VR applications.\n\nWould you like to continue?"
-"FirmwareWizard_DeviceOverview_Title"	"更新韌體"
+"FirmwareWizard_DeviceOverview_Title"	"裝置更新"
 "[english]FirmwareWizard_DeviceOverview_Title"	"Update Device"
 "FirmwareWizard_DeviceOverview_TextContent"	"您想要更新哪個裝置？"
 "[english]FirmwareWizard_DeviceOverview_TextContent"	"Which device would you like to update?"
@@ -693,7 +693,7 @@
 "[english]FirmwareWizard_UpdateController_MiddleText"	"\n\nPlug this controller into your computer with a micro-USB cable. You can use the same cable that is used to charge your controllers.\n"
 "FirmwareWizard_UpdateController_LowerText"	"韌體更新會在偵測到控制器後自動開始。"
 "[english]FirmwareWizard_UpdateController_LowerText"	"The firmware update will start automatically once your controller is detected."
-"FirmwareWizard_UpdateController_Fail_Title"	"韌體更新失敗"
+"FirmwareWizard_UpdateController_Fail_Title"	"裝置更新失敗"
 "[english]FirmwareWizard_UpdateController_Fail_Title"	"Device Update Failed"
 "FirmwareWizard_UpdateController_Fail_MiddleText"	"請確保控制器與電腦之間的 micro-USB 有連接牢靠。若這仍持續失敗，請退出 SteamVR。若控制器未關閉，請按住控制器上的系統鍵不放以關閉電源。隨後再啟動 SteamVR 並重新嘗試。"
 "[english]FirmwareWizard_UpdateController_Fail_MiddleText"	"Make sure your controller is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR. If your controller didn't turn off, turn it off by pressing and holding the system button. Then launch SteamVR and try again."
