--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -75,6 +75,9 @@
 	"Settings_Audio_SpeakerJackOutput_Title" : "Allows simultaneous audio through both the 3.5mm jack and the off-ear speakers",
 	"Settings_Audio_Single" : "Single",
 	"Settings_Audio_Dual" : "Dual",
+	"Settings_Audio_MicMonitor" : "Mic Monitoring (sidetone)",
+	"Settings_Audio_Active" : "Active",
+	"Settings_Audio_Muted" : "Muted",
 
 	"Settings_SectionTitle_Advanced": "Advanced",
 	"Settings_SectionTitle_Developer": "Developer",
@@ -112,6 +115,7 @@
 	"MenuAction_SetConfigDirectory": "Set Config Directory",
 	"MenuAction_SetLogDirectory": "Set Log Directory",
 	"Settings_Advanced_AllowSupersampleFiltering": "Advanced Supersample Filtering",
+	"Settings_Video_HDCP14LegacyCompatibility": "HDCP 1.4 Legacy Compatibility",
 	"Settings_Advanced_Paths_Header": "Paths",
 	"Settings_Advanced_Reset_Header": "Reset",
 	"Settings_Advanced_Status_Header": "Status Check",
